login and create token
